fechas misiones internas y form descuentos

--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Crear Cuadro directivo</title>
+    <title>Crear Cuadro Directivo</title>
   <th:block th:include="../templates/header"></th:block>
  
   </head>
