--- a/src/main/resources/templates/fragments/usuario/usuarioformedit.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioformedit.html
@@ -73,7 +73,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Confirmacion de Contraseña:</label>
                         <div class="col-sm-6">
-                            <input type="text" id="confpass" class="form-control " required="true" size="100" maxlength="50" th:field="*{controlcontrasenia}"/>
+                            <input type="text" id="confpass" class="form-control " required="true" size="100" maxlength="50" />
                         </div>
                         <div class="popup col-sm-1"><b>
                                 <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('passwconf')" onmouseout ="javascript:ocultarAyuda('passwconf')">a</a></b>
@@ -135,6 +135,7 @@
     
         $('#pass').attr('type', 'password');
         $('#confpass').attr('type', 'password');
+        $('#confpass').val($('#pass').val());
         $('#fingreso').datepicker({
                     dateFormat: 'dd/mm/yy'
         });
