subido obs parte 2

--- a/src/main/resources/templates/fragments/contrato/contratoform.html
+++ b/src/main/resources/templates/fragments/contrato/contratoform.html
@@ -94,7 +94,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                 </div>
                  <div class="form-group">
-                    <label class="col-sm-3 control-label">Unidad Pres.(*):</label>
+                    <label class="col-sm-3 control-label">Unidad Presupuestaria(*):</label>
                     <div class="col-sm-6">
                         <input type="text" class="form-control" required="true" size="100" maxlength="100"  th:field="*{unidadprecide}"   />
                     </div>
