--- a/src/main/resources/templates/fragments/contrato/contratoshow.html
+++ b/src/main/resources/templates/fragments/contrato/contratoshow.html
@@ -92,7 +92,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Unidad Pres:</label>
+                            <label class="col-sm-5 control-label">Unidad Presupuestaria:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${contrato.unidadprecide}">Apellido de Empleado</p>
                             </div>
