--- a/src/main/resources/templates/fragments/empleado/contratacionesreporte2.html
+++ b/src/main/resources/templates/fragments/empleado/contratacionesreporte2.html
@@ -654,7 +654,7 @@
                     </div>
                 </div>
                  <div class="form-group">
-                    <label class="col-sm-3 control-label">Unidad Pres.(*):</label>
+                    <label class="col-sm-3 control-label">Unidad Presupuestaria(*):</label>
                     <div class="col-sm-5">
                         <input type="text" class="form-control"     />
                     </div>
