--- a/src/main/resources/templates/fragments/mision/misiones.html
+++ b/src/main/resources/templates/fragments/mision/misiones.html
@@ -24,6 +24,7 @@
                 <th>Fecha de Salida</th>
                 <th>Fecha de Regreso</th>
                 <th></th>
+                <th></th>
 		<th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
 		<th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
             </tr>
@@ -37,6 +38,8 @@
                 <td th:text="${#calendars.format(mision.fechasalidamision, 'dd/MM/yyyy')}">fechasalidamision</td>
                 <td th:text="${#calendars.format(mision.fecharegresomision, 'dd/MM/yyyy')}">fecharegresomision</td>
                 <!--<td><a th:href="${'./showmisionesemp/' + mision.codigomision}" class="btn btn-primary">GestionarMiembros</a></td>-->
+                <td><a  class="btn btn-danger" th:onclick="'descargapdfc(\'' + ${mision.codigomision} + '\');'" >Descargar acuerdo</a></td>
+															
                 <td><a th:href="${'./show/' + mision.codigomision}" class="btn btn-info">Mostrar</a></td>
                 <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:href="${'./edit/' + mision.codigomision}" class="btn btn-success ">Modificar</a></td>
                 <td sec:authorize="hasRole('ROLE_OPERATIVO')"><a th:onclick="'eliminar(\'' + ${ mision.codigomision} +'\');'" class="btn btn-danger">Eliminar</a></td>
@@ -70,7 +73,7 @@
                 type: "success",
                 icon: "success",
        }).then(function() {
-                location.href = '../misiones/';
+                location.href = '../../misiones/';
        }); 
 }
     
@@ -94,11 +97,15 @@
             })
                     .then((willDelete) => {
                         if (willDelete) {
-                            location.href = '../delete/' + id;
+                            location.href = './delete/' + id;
                         } else {
                             swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
                         }
                     });
+        }
+        
+         function descargapdfc(idpdf){
+        location.href = '../../misiones/descarga/' + idpdf;
         }
     </script>
 </html>
