../ PARA QUE DESCARGUE EL PDF MISIONES

--- a/src/main/resources/templates/fragments/mision/misiones.html
+++ b/src/main/resources/templates/fragments/mision/misiones.html
@@ -105,7 +105,7 @@
         }
         
          function descargapdfc(idpdf){
-        location.href = '../../misiones/descarga/' + idpdf;
+        location.href = '../misiones/descarga/' + idpdf;
         }
     </script>
 </html>
