--- a/src/main/resources/templates/fragments/archivo/archivoform.html
+++ b/src/main/resources/templates/fragments/archivo/archivoform.html
@@ -49,7 +49,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                                                                                                 <div class="panel-info">
                                                                                                     <div class="panel-heading">
                                                                                                         <div class="col-md-5">
-                                                                                                            <input class="btn btn2" type="file" name="archivo" id="archivo" 
+                                                                                                            <input class="btn btn2" type="file" name="archivo" id="archivo " 
                                                                                                                    title="Buscar archivo"/>
                                                                                                         </div>
                                                                                                         <div class="col-md-2">
@@ -80,6 +80,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         </div>
     </div>
     </div>
+    <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>
     <script th:inline="javascript">
          Textheader('pnt_gecoms',document.title);
         $(document).ready(function () {
