--- a/src/main/resources/templates/fragments/contrato/contratoform.html
+++ b/src/main/resources/templates/fragments/contrato/contratoform.html
@@ -196,7 +196,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Acuerdo:</label>
                     <div class="col-sm-6">
-                        <input type="file" name="file" />
+                        <input id="file" type="file" name="file" accept="application/pdf" />
                                <!--class="" required="true" th:field="*{docaprovacion}"-->
                                
                     </div>
@@ -247,6 +247,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     <!--<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
      <script type="text/javascript"  th:src="@{/js/script.js}"></script>
 	<script  type="text/javascript">
+           
+
            
              function Fechas(val1,val2,val3,val4){
                  
