etiqueta de beneficios

--- a/src/main/resources/templates/fragments/beneficio/beneficios.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficios.html
@@ -17,11 +17,11 @@
                 <table id = "tablita" class="table table-striped">
                     <thead>
                         <tr>
-                            <th>Co&acute;digo</th>
-                            <th>Nombre</th>
-                            <th>Descripcio&acute;n</th>
-                            <th>Fecha Inicio</th>
-                            <th>Fecha Fin</th>
+                            <th>Código Beneficio</th>
+                            <th>Nombre Beneficio</th>
+                            <th>Descripción Beneficio</th>
+                            <th>Fecha Inicio Beneficio</th>
+                            <th>Fecha Fin Beneficio</th>
                             <th></th>
                             <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
                             <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
