--- a/src/main/resources/templates/fragments/beneficio/beneficioshow.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioshow.html
@@ -22,7 +22,7 @@
             <form class="form-horizontal">
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Código:</label>
+                    <label class="col-sm-2 control-label">Código Beneficio:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${beneficio.codigobeneficio}">Usuario Id</p></div>
                 </div>
@@ -33,21 +33,21 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Descripción:</label>
+                    <label class="col-sm-2 control-label">Descripción Beneficio:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${beneficio.descripcionbeneficio}">descripcion</p>
                     </div>
                 </div>
                 
                  <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha de inicio de beneficio:</label>
+                    <label class="col-sm-2 control-label">Fecha de inicio beneficio:</label>
                     <div class="col-sm-10">
                          <p class="form-control-static" th:text="${#calendars.format(beneficio.fechainiciobeneficio, 'dd/MM/yyyy')}">Fecha fin</p>
                     </div>
                 </div>
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha fin de beneficio:</label>
+                    <label class="col-sm-2 control-label">Fecha fin beneficio:</label>
                     <div class="col-sm-10">
                          <p class="form-control-static" th:text="${#calendars.format(beneficio.fechafinalizarbeneficio, 'dd/MM/yyyy')}">Fecha fin</p>
                     </div>
