Respaldo de codidgo

--- a/src/main/resources/templates/fragments/beneficio/beneficios.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficios.html
@@ -22,6 +22,7 @@
                             <th>Descripción Beneficio</th>
                             <th>Fecha Inicio Beneficio</th>
                             <th>Fecha Fin Beneficio</th>
+                            <th>Fecha Fin Beneficio</th>
                             <th></th>
                             <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
                             <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
