--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="10" uuid="61040501-82b0-436f-934f-a899fdfcb57e">
 	<property name="ireport.zoom" value="1.2100000000000009"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="27"/>
+	<property name="ireport.y" value="123"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -100,11 +100,14 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT concat(e.nombreempleado,' ',e.apellidoempleado) as Empleado ,DATE_FORMAT(c.fechainiciocontrato, '%d/%m/%Y') as desde,DATE_FORMAT(c.fechafincontrato, '%d/%m/%Y') as hasta,c.plazanominal,el.nombreinstitucion,c.salarioactual,c.sistemapago, DATE_FORMAT(CURRENT_DATE, '%d/%m/%Y') from empleado e inner join contrato c on e.codigoempleado=c.codigoempleado inner join experiencialaboral el
- on e.codigoempleado=el.codigoexperiencialaboral
+		<![CDATA[SELECT concat(e.nombreempleado,' ',e.apellidoempleado) as Empleado ,DATE_FORMAT(c.fechainiciocontrato, '%d/%m/%Y') as desde,DATE_FORMAT(c.fechafincontrato, '%d/%m/%Y') as hasta,c.plazanominal,el.nombreinstitucion,c.salarioactual,c.sistemapago, DATE_FORMAT(CURRENT_DATE, '%d/%m/%Y') from empleado e inner join empleadocontrato ec on e.codigoempleado=ec.codigoempleado 
+ inner join contrato c on ec.codigocontrato=c.codigocontrato
+ inner join descuento d on e.codigoempleado=d.codigoempleado 
+ inner join empleadoexperiencialaboral eel on e.codigoempleado=eel.codigoempleado inner 
+ join experiencialaboral el on eel.codigoexperiencialaboral=el.codigoexperiencialaboral
  WHERE e.codigoempleado=$P{CODIGO} and
  
-c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechainiciocontrato<= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y') ]]>
+c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechainiciocontrato<= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	</queryString>
 	<field name="Empleado" class="java.lang.String"/>
 	<field name="desde" class="java.lang.String"/>
